--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Install dependencies
+        run: cd ./client/ && npm i
       - name: Build with Vite
         run: cd ./client/ && npm run build
       - name: Upload artifact
