--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           name: production-files
-          path: ./dist
+          path: ./client/dist
 
   # Deployment job
   deploy:
