--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+      - name: Install dependencies
+        working-directory: ./client
+        run: npm ci
+      - name: Build
+        working-directory: ./client
+        run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Install dependencies
-        run: cd ./client/ && npm i
-      - name: Build with Vite
-        run: cd ./client/ && npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
           path: ./client/dist
 
   # Deployment job
