--- a/client/package.json
+++ b/client/package.json
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "vite": "^5.2.11"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.17.2"
   }
 }
